Modificacion en los encabezados de las vistas editar y detalles de las vistas de provedor y cliente

--- a/asp_2184587/Views/Cliente/Index.cshtml
+++ b/asp_2184587/Views/Cliente/Index.cshtml
@@ -7,18 +7,18 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.nombre)
+            Nombre
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.documento)
+            Documento
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.email)
+            Email
         </th>
         <th></th>
     </tr>
