--- a/asp_2184587/Views/Usuario/Index.cshtml
+++ b/asp_2184587/Views/Usuario/Index.cshtml
@@ -7,24 +7,24 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear nuevo usuario", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.nombre)
+            Nombre
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.apellido)
+            Apellido
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.fecha_nacimiento)
+            Feccha de Nacimiento
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.email)
+            Email
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.password)
+            Contraseña
         </th>
         <th></th>
     </tr>
