--- a/asp_2184587/Views/Cliente/Details.cshtml
+++ b/asp_2184587/Views/Cliente/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model asp_2184587.Models.usuario
+﻿@model asp_2184587.Models.cliente
 
 @{
     ViewBag.Title = "Details";
@@ -7,11 +7,11 @@
 <h2>Details</h2>
 
 <div>
-    <h4>suario</h4>
+    <h4>cliente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Nombre
+           Nombre
         </dt>
 
         <dd>
@@ -19,35 +19,19 @@
         </dd>
 
         <dt>
-            Apellido
+            Documento
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.apellido)
+            @Html.DisplayFor(model => model.documento)
         </dd>
 
         <dt>
-            Fecha de Nacimiento
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.fecha_nacimiento)
-        </dd>
-
-        <dt>
-             Email
+            Email
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.email)
-        </dd>
-
-        <dt>
-            Contraseña
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.password)
         </dd>
 
     </dl>
