--- a/asp_2184587/Views/Provedor/Index.cshtml
+++ b/asp_2184587/Views/Provedor/Index.cshtml
@@ -12,16 +12,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.nombre)
+            Nombre
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.direccion)
+            Direccion
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.telefono)
+            Telefono
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.nombre_contacto)
+            Nombre contacto
         </th>
         <th></th>
     </tr>
