--- a/asp_2184587/Views/Compra/Details.cshtml
+++ b/asp_2184587/Views/Compra/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model asp_2184587.Models.proveedor
+﻿@model asp_2184587.Models.compra
 
 @{
     ViewBag.Title = "Details";
@@ -7,39 +7,39 @@
 <h2>Details</h2>
 
 <div>
-    <h4>proveedor</h4>
+    <h4>compra</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Nombre
+            Fecha
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.nombre)
+            @Html.DisplayFor(model => model.fecha)
         </dd>
 
         <dt>
-            Direccion
+            Total
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.direccion)
+            @Html.DisplayFor(model => model.total)
         </dd>
 
         <dt>
-            Telefono
+            Id Usuario
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.telefono)
+            @Html.DisplayFor(model => model.id_usuario)
         </dd>
 
         <dt>
-            Nombre contacto
+            Id Cliente
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.nombre_contacto)
+            @Html.DisplayFor(model => model.id_cliente)
         </dd>
 
     </dl>
