--- a/asp_2184587/Views/Producto/Details.cshtml
+++ b/asp_2184587/Views/Producto/Details.cshtml
@@ -1,13 +1,7 @@
-﻿@model asp_2184587.Models.proveedor
-
-@{
-    ViewBag.Title = "Details";
-}
-
-<h2>Details</h2>
+﻿@model asp_2184587.Models.producto
 
 <div>
-    <h4>proveedor</h4>
+    <h4>producto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,27 +13,35 @@
         </dd>
 
         <dt>
-            Direccion
+            Precio unitario
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.direccion)
+            @Html.DisplayFor(model => model.precio_unitario)
         </dd>
 
         <dt>
-            Telefono
+            Descripcion
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.telefono)
+            @Html.DisplayFor(model => model.descripcion)
         </dd>
 
         <dt>
-            Nombre contacto
+            Cantidad
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.nombre_contacto)
+            @Html.DisplayFor(model => model.cantidad)
+        </dd>
+
+        <dt>
+            Id Proveedor
+        </dt>
+
+        <dd>
+            @asp_2184587.Controllers.ProductoController.NombreProveedor(Model.id_proveedor)
         </dd>
 
     </dl>
