--- a/asp_2184587/Views/Producto_Compra/Index.cshtml
+++ b/asp_2184587/Views/Producto_Compra/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<asp_2184587.Models.cliente>
+﻿@model IEnumerable<asp_2184587.Models.producto_compra>
 
 @{
     ViewBag.Title = "Index";
@@ -7,18 +7,18 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Crear Nuevo", "Create")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            Nombre
+            Id Compra:
         </th>
         <th>
-            Documento
+            Id Producto:
         </th>
         <th>
-            Email
+            Cantidad:
         </th>
         <th></th>
     </tr>
@@ -27,13 +27,16 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.nombre)
+
+                @Html.DisplayFor(modelItem => item.id_compra)
+
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.documento)
+
+                @asp_2184587.Controllers.Producto_CompraController.NombreProducto(item.id_producto)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.email)
+                @Html.DisplayFor(modelItem => item.cantidad)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
@@ -45,6 +48,7 @@
 
 </table>
 
+
 @section scripts{
     <script>
         $(".linkDelete").click(function (event) {
@@ -53,4 +57,5 @@
             }
         })
     </script>
+
 }
