--- a/asp_2184587/Views/Shared/_Layout.cshtml
+++ b/asp_2184587/Views/Shared/_Layout.cshtml
@@ -24,12 +24,17 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Iniciar Sesion", "Login", "Usuario")</li>
+                          @if (User.Identity.IsAuthenticated)
+                          {
                     <li>@Html.ActionLink("Usuario", "Index", "Usuario")</li>
                     <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
                     <li>@Html.ActionLink("Compra", "Index", "Compra")</li>
                     <li>@Html.ActionLink("Producto", "Index", "Producto")</li>
                     <li>@Html.ActionLink("Producto_Compra", "Index", "Producto_Compra")</li>
                     <li>@Html.ActionLink("Proveedor", "Index", "Proveedor")</li>
+                    <li>@Html.ActionLink("Cerrar Sesion", "CloseSession", "Usuario")</li>
+                          }
 
                 </ul>
             </div>
