Se crearon las validaciones del formulario usuario, reporte de compra e impresion del mismo.

--- a/asp_2184587/Views/Shared/_Layout.cshtml
+++ b/asp_2184587/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <li>@Html.ActionLink("Compra", "Index", "Compra")</li>
                     <li>@Html.ActionLink("Producto", "Index", "Producto")</li>
                     <li>@Html.ActionLink("Producto_Compra", "Index", "Producto_Compra")</li>
-                    <li>@Html.ActionLink("Proveedor", "Index", "Proveedor")</li>
+                    <li>@Html.ActionLink("Proveedor", "Index", "Provedor")</li>
                     <li>@Html.ActionLink("Cerrar Sesion", "CloseSession", "Usuario")</li>
                           }
 
