Validaciones en cada formulario

--- a/asp_2184587/Views/Compra/Index.cshtml
+++ b/asp_2184587/Views/Compra/Index.cshtml
@@ -7,21 +7,21 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            Fecha:
+            Fecha
         </th>
         <th>
-            Total:
+            Total
         </th>
         <th>
-            Id Usuario:
+            Nombre Usuario
         </th>
         <th>
-            Id Cliente:
+            Id Cliente
         </th>
         <th></th>
     </tr>
