--- a/asp_2184587/Views/Producto/Index.cshtml
+++ b/asp_2184587/Views/Producto/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -15,16 +15,16 @@
             Nombre
         </th>
         <th>
-            Precio Unitario:
+            Precio Unitario
         </th>
         <th>
-            Descripcion:
+            Descripcion
         </th>
         <th>
-            Cantidad:
+            Cantidad
         </th>
         <th>
-            Id Proveedor:
+            Nombre Proveedor
         </th>
         <th></th>
     </tr>
