--- a/asp_2184587/Views/Producto_Compra/Index.cshtml
+++ b/asp_2184587/Views/Producto_Compra/Index.cshtml
@@ -7,18 +7,18 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            Id Compra:
+            Id Compra
         </th>
         <th>
-            Id Producto:
+            Nombre Producto
         </th>
         <th>
-            Cantidad:
+            Cantidad
         </th>
         <th></th>
     </tr>
