--- a/asp_2184587/Views/Cliente/Details.cshtml
+++ b/asp_2184587/Views/Cliente/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>cliente</h4>
+    <h4>Cliente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -38,5 +38,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </p>
