--- a/asp_2184587/Views/Compra/Create.cshtml
+++ b/asp_2184587/Views/Compra/Create.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>compra</h4>
+        <h4>Ingresar Compra</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -31,7 +31,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="id_usuario">Id Usuario </label>
+            <label class="control-label col-md-2" for="id_usuario">Nombre Usuario </label>
             <div class="col-md-10">
                 @Html.Action("ListarUsuario")
                 @Html.ValidationMessageFor(model => model.id_usuario, "", new { @class = "text-danger" })
@@ -39,7 +39,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="id_cliente">Id Cliente </label>
+            <label class="control-label col-md-2" for="id_cliente">Nombre Cliente </label>
             <div class="col-md-10">
                 @Html.Action("ListarCliente")
                 @Html.ValidationMessageFor(model => model.id_cliente, "", new { @class = "text-danger" })
@@ -48,12 +48,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
