--- a/asp_2184587/Views/Compra/Edit.cshtml
+++ b/asp_2184587/Views/Compra/Edit.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>compra</h4>
+        <h4>Compra</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
@@ -19,7 +19,7 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="fecha">Fecha </label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
                 @Html.ValidationMessageFor(model => model.fecha, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="id_usuario">Id Usuario </label>
+            <label class="control-label col-md-2" for="id_usuario">Nombre Usuario </label>
             <div class="col-md-10">
                 @Html.Action("ListarUsuario")
                 @Html.ValidationMessageFor(model => model.id_usuario, "", new { @class = "text-danger" })
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="id_cliente">Id Cliente </label>
+            <label class="control-label col-md-2" for="id_cliente">Nombre Cliente </label>
             <div class="col-md-10">
                 @Html.Action("ListarCliente")
                 @Html.ValidationMessageFor(model => model.id_cliente, "", new { @class = "text-danger" })
@@ -50,12 +50,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </div>
