--- a/asp_2184587/Views/Producto/Details.cshtml
+++ b/asp_2184587/Views/Producto/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model asp_2184587.Models.producto
 
 <div>
-    <h4>producto</h4>
+    <h4>Producto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -37,7 +37,7 @@
         </dd>
 
         <dt>
-            Id Proveedor
+            Nombre Proveedor
         </dt>
 
         <dd>
@@ -48,5 +48,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </p>
