--- a/asp_2184587/Views/Producto/Edit.cshtml
+++ b/asp_2184587/Views/Producto/Edit.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>producto</h4>
+        <h4>Producto</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
@@ -49,7 +49,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="id_proveedor">Id Provedor </label>
+            <label class="control-label col-md-2" for="id_proveedor">Nombre Provedor </label>
             <div class="col-md-10">
                 @Html.Action("listarProveedores")
                 @Html.ValidationMessageFor(model => model.id_proveedor, "", new { @class = "text-danger" })
@@ -58,12 +58,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </div>
