--- a/asp_2184587/Views/Producto_Compra/Create.cshtml
+++ b/asp_2184587/Views/Producto_Compra/Create.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Crear Nuevo</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>producto_compra</h4>
+        <h4>Producto Compra</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="id_producto">Id Producto </label>
+            <label class="control-label col-md-2" for="id_producto">Nombre Producto </label>
             <div class="col-md-10">
                 @Html.Action("listarProducto")
                 @Html.ValidationMessageFor(model => model.id_producto, "", new { @class = "text-danger" })
@@ -47,5 +47,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </div>
