--- a/asp_2184587/Views/Producto_Compra/Details.cshtml
+++ b/asp_2184587/Views/Producto_Compra/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>producto_compra</h4>
+    <h4>Producto Compra</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            Id Producto
+            Nombre Producto
         </dt>
 
         <dd>
@@ -38,5 +38,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </p>
