--- a/asp_2184587/Views/Producto_Compra/Edit.cshtml
+++ b/asp_2184587/Views/Producto_Compra/Edit.cshtml
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2" for="id_producto">Id Producto </label>
+            <label class="control-label col-md-2" for="id_producto">Nombre Producto </label>
             <div class="col-md-10">
                 @Html.Action("listarProducto")
                 @Html.ValidationMessageFor(model => model.id_producto, "", new { @class = "text-danger" })
@@ -42,12 +42,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </div>
