--- a/asp_2184587/Views/Usuario/Create.cshtml
+++ b/asp_2184587/Views/Usuario/Create.cshtml
@@ -60,7 +60,7 @@
                 </div>}
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 @section Scripts {
