--- a/asp_2184587/Views/Usuario/Details.cshtml
+++ b/asp_2184587/Views/Usuario/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>suario</h4>
+    <h4>Usuario</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -42,17 +42,11 @@
             @Html.DisplayFor(model => model.email)
         </dd>
 
-        <dt>
-            Contraseña
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.password)
-        </dd>
+        
 
     </dl>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </p>
