--- a/asp_2184587/Views/Usuario/Edit.cshtml
+++ b/asp_2184587/Views/Usuario/Edit.cshtml
@@ -35,7 +35,7 @@
                     <div class="form-group">
                         <label class="control-label col-md-2" for="fecha_nacimiento">Fecha de Nacimiento: </label>
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.fecha_nacimiento, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.fecha_nacimiento, new { htmlAttributes = new { @class = "form-control",@type= "date" } })
                             @Html.ValidationMessageFor(model => model.fecha_nacimiento, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -52,7 +52,7 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Save" class="btn btn-default" />
+                            <input type="submit" value="Guardar" class="btn btn-default" />
                         </div>
                     </div>
                 </div>}
