--- a/asp_2184587/Views/Producto/Details.cshtml
+++ b/asp_2184587/Views/Producto/Details.cshtml
@@ -1,5 +1,7 @@
 ﻿@model asp_2184587.Models.producto
 
+
+
 <div>
     <h4>Producto</h4>
     <hr />
@@ -42,6 +44,13 @@
 
         <dd>
             @asp_2184587.Controllers.ProductoController.NombreProveedor(Model.id_proveedor)
+        </dd>
+
+        <dt>
+            Imagen
+        </dt>
+        <dd>
+            <img src="@Html.DisplayFor(model =>model.IMAGEN )" alt="Alternate Text" />
         </dd>
 
     </dl>
